--- a/main.bib
+++ b/main.bib
@@ -158,6 +158,25 @@
 	year={2007}
 }
 
+
+@inproceedings{audemard2012refining,
+	title={Refining restarts strategies for SAT and UNSAT},
+	author={Audemard, Gilles and Simon, Laurent},
+	booktitle={International Conference on Principles and Practice of Constraint Programming},
+	pages={118--126},
+	year={2012},
+	organization={Springer}
+}
+
+@inproceedings{biere2008adaptive,
+	title={Adaptive restart strategies for conflict driven SAT solvers},
+	author={Biere, Armin},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={28--33},
+	year={2008},
+	organization={Springer}
+}
+
 @inproceedings{gomes1997heavy,
 	title={Heavy-tailed distributions in combinatorial search},
 	author={Gomes, Carla P and Selman, Bart and Crato, Nuno},
@@ -454,4 +473,25 @@
 	pages={136--141},
 	year={2006},
 	organization={Springer}
+}
+
+% Incomplete algo
+
+@article{kautz2009incomplete,
+	title={Incomplete Algorithms.},
+	author={Kautz, Henry A and Sabharwal, Ashish and Selman, Bart},
+	journal={Handbook of satisfiability},
+	volume={185},
+	pages={185--203},
+	year={2009}
+}
+
+@article{robinson1965machine,
+	title={A machine-oriented logic based on the resolution principle},
+	author={Robinson, John Alan and others},
+	journal={Journal of the ACM},
+	volume={12},
+	number={1},
+	pages={23--41},
+	year={1965}
 }
