--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,7 @@ outer=3.8cm, % Outer margin
 \usepackage{subfig}
 \usepackage{calc,soul,fourier}
 \usepackage{phaistos} % animal symbols
-
+\usepackage{multirow}
 
 %\usepackage{DejaVuSans}
 %\usepackage[T1]{fontenc}
@@ -126,11 +126,11 @@ outer=3.8cm, % Outer margin
 
 \mainmatter
 
-\input{TODO}
+\input{introduction}
+
 
 \part{State-of-the-art}
 % Chapters
-\input{introduction}
 
 \setcounter{mtc}{2} 
 \input{preliminaries}
