--- a/main.bib
+++ b/main.bib
@@ -290,6 +290,24 @@
 }
 
 % === Graph automorphism
+
+@book{kobler2012graph,
+	title={The graph isomorphism problem: its structural complexity},
+	author={Kobler, Johannes and Sch{\"o}ning, Uwe and Tor{\'a}n, Jacobo},
+	year={2012},
+	publisher={Springer Science \& Business Media}
+}
+@article{toran2004hardness,
+	title={On the hardness of graph isomorphism},
+	author={Tor{\'a}n, Jacobo},
+	journal={SIAM Journal on Computing},
+	volume={33},
+	number={5},
+	pages={1093--1108},
+	year={2004},
+	publisher={SIAM}
+}
+
 @InProceedings{JunttilaKaski:ALENEX2007,
 	author =    {Tommi Junttila and Petteri Kaski},
 	title =     {Engineering an efficient canonical labeling tool for
@@ -495,3 +513,7 @@
 	pages={23--41},
 	year={1965}
 }
+
+
+
+
